[gd_scene load_steps=2 format=3 uid="uid://bohnn4r2bgu04"]

[ext_resource type="Script" uid="uid://bxhhpv81ms8dh" path="res://scene/dialogs/create_new_project.gd" id="1_3367c"]

[node name="CreateNewProject" type="ConfirmationDialog"]
oversampling_override = 1.0
title = "Ð¡anvas settings"
size = Vector2i(224, 298)
script = ExtResource("1_3367c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 216.0
offset_bottom = 249.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Canvas Size"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="TemplatesContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TemplatesContainer"]
layout_mode = 2
text = "Pattern: "

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/TemplatesContainer"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1
popup/item_2/text = "1080x1920"
popup/item_2/id = 2

[node name="WidthContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/WidthContainer"]
layout_mode = 2
text = "Widht: "

[node name="WidthValue" type="SpinBox" parent="VBoxContainer/WidthContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 10000.0
value = 1920.0

[node name="HeightContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HeightContainer"]
layout_mode = 2
text = "Height: "

[node name="HeightValue" type="SpinBox" parent="VBoxContainer/HeightContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 10000.0
value = 1080.0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HeightContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HeightContainer2"]
layout_mode = 2
text = "Name: "

[node name="NameLabel" type="LineEdit" parent="VBoxContainer/HeightContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="HeightContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="label" type="Label" parent="VBoxContainer/HeightContainer3"]
layout_mode = 2
text = "Background: "

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/HeightContainer3"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(1, 1, 1, 1)

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Warning" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 0, 1)
layout_mode = 2
text = "Odd size: export problems!"

[connection signal="canceled" from="." to="." method="_on_canceled"]
[connection signal="confirmed" from="." to="." method="_on_confirmed"]
[connection signal="item_selected" from="VBoxContainer/TemplatesContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="value_changed" from="VBoxContainer/WidthContainer/WidthValue" to="." method="_on_width_value_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HeightContainer/HeightValue" to="." method="_on_height_value_value_changed"]
[connection signal="color_changed" from="VBoxContainer/HeightContainer3/ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
